[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/d_alien_cara_strip17.png" type="Texture" id=1]
[ext_resource path="res://Sprites/d_alien_cuerpo_strip3.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Alien.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -141 ), Vector2( 9, -148 ), Vector2( 9, -141 ), Vector2( 9, -132 ), Vector2( 9, -141 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2, 2.5, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -216 ), Vector2( 4, -221 ), Vector2( 4, -221 ), Vector2( 4, -216 ), Vector2( 3, -204 ), Vector2( 3, -204 ), Vector2( 4, -216 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Kill"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -141 ), Vector2( 3, -141 ), Vector2( 9, -141 ), Vector2( 15, -141 ), Vector2( 9, -141 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -216 ), Vector2( 7, -216 ), Vector2( 4, -216 ), Vector2( 1, -216 ), Vector2( 4, -216 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, -141 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -216 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Super"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15, -141 ), Vector2( 9, -142 ), Vector2( 10, -149 ), Vector2( 22, -146 ), Vector2( 15, -141 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6.84154, -216 ), Vector2( 12, -220 ), Vector2( 5, -225 ), Vector2( 3, -218 ), Vector2( 6.84154, -216 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Bien"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Boca:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/Boca/Baba:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/OjoL:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo/OjoR:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Habla"
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Boca/Baba:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Boca/Baba:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/Boca:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 13 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Kill"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/OjoL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/OjoR:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/Boca:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo/Boca/Baba:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Craneo/Boca/Baba:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 4 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Craneo/Boca/Baba:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Craneo/Boca/Baba:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2.34883 ), Vector2( 0, -5 ), Vector2( 0, -2.34883 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Mal"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Boca:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/Boca/Baba:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/OjoL:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo/OjoR:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Boca/Baba:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/Boca:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/OjoL:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo/OjoR:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Craneo/Boca/Baba:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Craneo/Boca/Baba:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Craneo/Boca/Baba:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Super"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/OjoL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/OjoR:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/Boca:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo/Boca/Baba:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Craneo/Boca/Baba:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Craneo/Boca/Baba:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Craneo/Boca/Baba:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[node name="Alien" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pies" type="Sprite" parent="."]
position = Vector2( 11, -85 )
texture = ExtResource( 2 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Cuerpo" type="Sprite" parent="."]
position = Vector2( 9, -141 )
texture = ExtResource( 2 )
hframes = 3
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Craneo" type="Node2D" parent="."]
position = Vector2( 4, -216 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cabeza" type="Sprite" parent="Craneo"]
position = Vector2( 5, -50 )
texture = ExtResource( 2 )
hframes = 3
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Boca" type="Sprite" parent="Craneo"]
position = Vector2( -20, -21 )
texture = ExtResource( 1 )
offset = Vector2( -10, 20 )
flip_h = true
hframes = 17
frame = 13
__meta__ = {
"_edit_lock_": true
}

[node name="Baba" type="Sprite" parent="Craneo/Boca"]
visible = false
texture = ExtResource( 1 )
offset = Vector2( -10, 20 )
flip_h = true
hframes = 17
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="OjoL" type="Sprite" parent="Craneo"]
position = Vector2( -42, -78.5 )
texture = ExtResource( 1 )
offset = Vector2( -10, 20 )
flip_h = true
hframes = 17
__meta__ = {
"_edit_lock_": true
}

[node name="OjoR" type="Sprite" parent="Craneo"]
position = Vector2( -2, -70.5 )
texture = ExtResource( 1 )
offset = Vector2( -10, 20 )
flip_h = true
hframes = 17
__meta__ = {
"_edit_lock_": true
}

[node name="Anima" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Kill = SubResource( 10 )
anims/RESET = SubResource( 2 )
anims/Super = SubResource( 11 )

[node name="Estado" type="AnimationPlayer" parent="."]
anims/Bien = SubResource( 3 )
anims/Habla = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Kill = SubResource( 6 )
anims/Mal = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Super = SubResource( 9 )

[connection signal="animation_finished" from="Estado" to="." method="_on_Estado_animation_finished"]
